# gregory_active_agent

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLEAN_SOLUTION_STATUS.md  Dockerfile.api  Dockerfile.strategy  EVENT_LOOP_ISSUE.md  IMPLEMENTATION_SUMMARY.md  Makefile  NEXT_STEPS.md  ORCHESTRATION_QUICKSTART.md  QUICKSTART.md  QUICK_START.md  README.md  WHAT_WAS_BUILT.md  docker-compose.v2.yml  docker-compose.yml  env.example  example_usage.py  example_usage_async.py  pyproject.toml  requirements.txt  run_all.py  run_async.py  run_bot.py  run_dashboard.py  run_example.py  start_all.sh  status.sh  stop_all.sh  test_dashboard.py
.github/workflows/: ci.yml
app/: api.py  dashboard.py  dashboard_fastapi.py
config/: settings.example.yaml  settings.test.yaml  settings.yaml
docker/: Dockerfile  Dockerfile.api  Dockerfile.bot  Dockerfile.dashboard
docs/: DATABASE.md  README.md  SECURITY.md
docs/architecture/: ASYNC_PERFORMANCE.md  README.md
docs/glossary/: FAQ.md  GLOSSARY.md  README.md
docs/overview/: FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  README.md  WHAT_WAS_BUILT.md
docs/setup/: README.md  SETUP.md
ops/: README.md
ops/monitoring/: prometheus.yml
ops/n8n/: metrics-guard.json  nightly-retrain.json  run-strategy.json
ops/nginx/: nginx.conf
ops/sql/: init.sql  schema_v2.sql  sqlite_schema.sql
scripts/: README.md  init_db.py  run_all.py  run_api.py  run_api_v2.py  run_async.py  run_bot.py  run_clean_api.py  run_dashboard.py  status.sh  stop_all.sh  test_db.py  test_e2e.py  test_imports.py  test_security.py
src/: __init__.py  async_main.py  main.py
src/api/: __init__.py  secure_server.py
src/api/v2/: __init__.py  clean_server.py  server.py
src/contracts/: __init__.py  broker.py  data_feed.py  portfolio_manager.py  risk_engine.py  strategy_runtime.py
src/core/: __init__.py  config.py  logger.py
src/data/: __init__.py  base_adapter.py  fundingpips_adapter.py  hashhedge_adapter.py
src/database/: __init__.py  clean_connection.py  connection.py  models.py  services.py
src/execution/: __init__.py  paper_broker.py
src/security/: __init__.py  rate_limiter.py  retry_policy.py  webhook_auth.py
src/strategies/: __init__.py  base_strategy.py  indicators.py  trend_following_strategy.py
telegram_bot/: __init__.py  bot.py
tests/: __init__.py
tests/unit/: test_contracts.py  test_paper_broker.py
